deployment2/fc/fc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fc-service-part
  labels:
    app: fc-service-part
  namespace: federated-catalogue-partner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fc-service-part
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: fc-service-part
    spec:
      containers:
        - name: fc-service-server-image
          image: registry.gitlab.com/gaia-x/data-infrastructure-federation-services/cat/fc-service/fc-service-server:1.0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
#          volumeMounts:
#            - name: fc-file-store
#              mountPath: /var/lib/fc-service
#              subPath: filestore
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 30
          resources: { }
          securityContext:
            allowPrivilegeEscalation: false 
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - fc-service-part
                topologyKey: "kubernetes.io/hostname"
#      volumes:
#        - name: fc-file-store
#          persistentVolumeClaim:
#            claimName: fc-filestore-claim
      restartPolicy: Always
